--- a/sass/components/_about-company.scss
+++ b/sass/components/_about-company.scss
@@ -1,39 +1,155 @@
 /* Про компанию */
 
+
 .features-list {
-	display: flex;
-	flex-wrap: wrap;
+
+	@media screen and (min-width: 768px) {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+
+
 }
 
 .feature-item {
-	width: calc((100% - 90px) / 4);
+
+	width: 100%;
+
 
 	&:not(:last-child) {
-		margin-right: 30px;
-	}
-}
-
-.feature-item {
-	&__wrapper {
-		width: 100%;
-		height: 120px;
 		margin-bottom: 30px;
+	}
 
+	text-align: center;
+
+	@media screen and (min-width: 768px) {
+		width: calc((100% - 30px) / 2);
+		&:not(:last-child) {
+			margin-bottom: 0;
+
+		}
+
+		&:nth-child(2n + 1) {
+			margin-right: 30px;
+		}
+
+		&:nth-child(-n + 2) {
+			margin-bottom: 30px;
+		}
+
+	}
+
+	@media screen and (min-width: 1200px) {
+
+		width: calc((100% - 90px) / 4);
+
+		&:nth-child(2n + 1) {
+			margin-right: 0px;
+		}
+
+		&:nth-child(-n + 2) {
+			margin-bottom: 0px;
+		}
+
+		&:not(:last-child) {
+			margin-right: 30px;
+		}
+
+	}
+
+
+
+	&__wrapper {
+		height: 120px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		border-radius: 4px;
+
 		background-color: $secondary-background-color;
+		margin-bottom: 30px;
 	}
+
+	&__icon {
+		display: block;
+	}
+
 
 	&__title {
 		margin-bottom: 10px;
-		color: $title-text-color;
-		font-style: normal;
-		font-weight: 700;
 		font-size: 14px;
+		font-weight: 700;
 		line-height: 1.14;
 		letter-spacing: 0.03em;
+		text-align: center;
+
 		text-transform: uppercase;
+
+		color: $title-text-color;
+
 	}
+
+
+
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .features-list {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// }
+
+// .feature-item {
+// 	width: calc((100% - 90px) / 4);
+
+// 	&:not(:last-child) {
+// 		margin-right: 30px;
+// 	}
+// }
+
+// .feature-item {
+// 	&__wrapper {
+// 		width: 100%;
+// 		height: 120px;
+// 		margin-bottom: 30px;
+
+// 		display: flex;
+// 		justify-content: center;
+// 		align-items: center;
+// 		border-radius: 4px;
+// 		background-color: $secondary-background-color;
+// 	}
+
+// 	&__title {
+// 		margin-bottom: 10px;
+// 		color: $title-text-color;
+// 		font-style: normal;
+// 		font-weight: 700;
+// 		font-size: 14px;
+// 		line-height: 1.14;
+// 		letter-spacing: 0.03em;
+// 		text-transform: uppercase;
+// 	}
+// }
