--- a/sass/components/_activity.scss
+++ b/sass/components/_activity.scss
@@ -1,48 +1,57 @@
+
 .activity {
-	padding-top: 0;
+	display: none;
 }
 
 
 
+
+
+
 .activity {
-	&__list {
-		display: flex;
-		flex-wrap: nowrap;
-	}
-
-	&__item {
-		width: calc((100% - 60px) / 3);
-		position: relative;
-	}
-
-	&__item:not(:last-child) {
-		margin-right: 30px;
-	}
-
-	&__img {
+	@media screen and (min-width: 1200px) {
 		display: block;
-		width: 100%;
-	}
+		padding-top: 0;
 
-	&__subtitle {
-		width: 100%;
-		/* возможно высоту задать в каких-то относительных единицах */
-		height: 70px;
-		background-color: rgba(47, 48, 58, 0.8);
-		display: flex;
-		justify-content: center;
-		align-items: center;
+		&__list {
+			display: flex;
+			flex-wrap: nowrap;
+		}
 
-		font-size: 14px;
-		font-weight: 700;
-		line-height: 16px;
-		letter-spacing: 0.03em;
-		text-align: center;
+		&__item {
+			width: calc((100% - 60px) / 3);
+			position: relative;
+		}
 
-		color: #FFFFFF;
-		text-transform: uppercase;
+		&__item:not(:last-child) {
+			margin-right: 30px;
+		}
 
-		position: absolute;
-		bottom: 0;
+		&__img {
+			display: block;
+			width: 100%;
+		}
+
+		&__subtitle {
+			width: 100%;
+			/* возможно высоту задать в каких-то относительных единицах */
+			height: 70px;
+			background-color: rgba(47, 48, 58, 0.8);
+			display: flex;
+			justify-content: center;
+			align-items: center;
+
+			font-size: 14px;
+			font-weight: 700;
+			line-height: 16px;
+			letter-spacing: 0.03em;
+			text-align: center;
+
+			color: #FFFFFF;
+			text-transform: uppercase;
+
+			position: absolute;
+			bottom: 0;
+		}
 	}
 }
