--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -1,26 +1,83 @@
 /* regular customers */
 
+
 .customers {
-	&__item {
-		list-style: none;
-		display: flex;
-		justify-content: space-between;
-	}
+
+
 
 	&__list {
-		list-style: none;
 		display: flex;
-		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+
+	&__item {
+
+		width: calc((100% - 30px) / 2);
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		&:not(:nth-child(2n)) {
+			margin-right: 30px;
+		}
+
+		margin-bottom: 30px;
+
+		&:nth-last-child(-n + 2) {
+			margin-bottom: 0;
+		}
+
+		@media screen and (min-width: 768px) {
+			width: calc((100% - 60px) / 3);
+
+			&:not(:nth-child(2n)) {
+				margin-right: 0;
+			}
+
+			margin-bottom: 0;
+
+			&:not(:nth-child(3n + 3)) {
+				margin-right: 30px;
+			}
+
+			&:nth-child(-n + 3) {
+				margin-bottom: 30px;
+			}
+
+		}
+
+
+
+		@media screen and (min-width: 1200px) {
+			width: calc((100% - 150px) / 6);
+
+
+			&:not(:nth-child(3n + 3)) {
+				margin-right: 0px;
+			}
+
+			&:nth-child(-n + 3) {
+				margin-bottom: 0px;
+			}
+
+			&:not(:last-child) {
+				margin-right: 30px;
+			}
+
+		}
 	}
 
 	&__link {
-		width: 170px;
+		width: 100%;
 		height: 92px;
-		border: 1px solid #AFB1B8;
-		border-radius: 4px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
+
+		border-radius: 4px;
+		border: 1px solid $secondary-background-color;
 
 		transition-property: border-color;
 		transition-duration: 250ms;
@@ -29,6 +86,7 @@
 		&:hover, &:focus {
 			border-color: $accent;
 		}
+
 	}
 
 	&__icon {
@@ -41,7 +99,57 @@
 		.customers__link:hover &, .customers__link:focus & {
 			fill: $accent;
 		}
-
 	}
 }
+
+
+
+
+
+
+
+// .customers {
+// 	&__item {
+// 		list-style: none;
+// 		display: flex;
+// 		justify-content: space-between;
+// 	}
+
+// 	&__list {
+// 		list-style: none;
+// 		display: flex;
+// 		justify-content: space-between;
+// 	}
+
+// 	&__link {
+// 		width: 170px;
+// 		height: 92px;
+// 		border: 1px solid #AFB1B8;
+// 		border-radius: 4px;
+// 		display: flex;
+// 		justify-content: center;
+// 		align-items: center;
+
+// 		transition-property: border-color;
+// 		transition-duration: 250ms;
+// 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+// 		&:hover, &:focus {
+// 			border-color: $accent;
+// 		}
+// 	}
+
+// 	&__icon {
+// 		fill: $icon-primary-color;
+
+// 		transition-property: fill;
+// 		transition-duration: 250ms;
+// 		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+// 		.customers__link:hover &, .customers__link:focus & {
+// 			fill: $accent;
+// 		}
+
+// 	}
+// }
 
