--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,59 +1,134 @@
+
+
 .hero {
-	padding: 0 0;
-	/* background-color: var(--add-background-color); */
-
-	text-align: center;
-}
-
-.hero__container {
-	width: 1600px;
-	margin-left: auto;
-	margin-right: auto;
-	padding-top: 200px;
-	padding-bottom: 200px;
-	background-color: $add-background-color;
-	background-image:
-		linear-gradient(to right,
-			rgba(47, 48, 58, 0.4),
-			rgba(47, 48, 58, 0.4)),
-		url(../images/herobcgrnd.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-
-
-.hero__title {
-	margin-bottom: 30px;
-	color: #FFFFFF;
-	font-weight: 900;
-	font-size: 44px;
-	line-height: 1.36;
-	text-align: center;
-	letter-spacing: 0.06em;
-	text-transform: uppercase;
-}
+	padding: 0;
 
 
 
-.button--hero {
-	@extend .button;
-	margin-left: auto;
-	margin-right: auto;
-	background: $accent;
-	color: #FFFFFF;
-	font-weight: 700;
-	font-size: 16px;
-	line-height: 1.88;
-	letter-spacing: 0.06em;
-	padding: 10px 32px;
+	&__container {
+		background-color: $add-background-color;
+		padding: 118px 0;
+		text-align: center;
 
 
-	transition-property: background-color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-	&:hover, &:focus {
-		background-color: #188CE8;
+		@media screen and (min-width: 1200px) {
+			padding: 200px 0;
+			width: 1600px;
+		}
 	}
+
+
+
+	&__title {
+		margin-bottom: 30px;
+
+		font-family: Roboto;
+		font-size: 26px;
+		font-weight: 900;
+		line-height: 1.61;
+		letter-spacing: 0.06em;
+		text-align: center;
+
+		color: #FFFFFF;
+
+		@media screen and (min-width: 1200px) {
+			font-family: Roboto;
+			font-size: 44px;
+			font-weight: 900;
+			line-height: 1.36;
+		}
+
+	}
+
+
+	.button--hero {
+		@extend %button;
+		background-color: $accent;
+		color: #FFFFFF;
+		font-weight: 700;
+		font-size: 16px;
+		line-height: 1.88;
+		letter-spacing: 0.06em;
+		padding: 10px 32px;
+
+		transition-property: background-color;
+		transition-duration: 250ms;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+		&:hover, &:focus {
+			background-color: #188CE8;
+		}
+
+	}
+
+
 }
+
+
+
+
+
+
+
+
+
+
+// .hero {
+// 	padding: 0 0;
+
+
+// 	text-align: center;
+// }
+
+// .hero__container {
+// 	width: 1600px;
+// 	margin-left: auto;
+// 	margin-right: auto;
+// 	padding-top: 200px;
+// 	padding-bottom: 200px;
+// 	background-color: $add-background-color;
+// 	background-image:
+// 		linear-gradient(to right,
+// 			rgba(47, 48, 58, 0.4),
+// 			rgba(47, 48, 58, 0.4)),
+// 		url(../images/herobcgrnd.jpg);
+// 	background-size: cover;
+// 	background-repeat: no-repeat;
+// }
+
+
+// .hero__title {
+// 	margin-bottom: 30px;
+// 	color: #FFFFFF;
+// 	font-weight: 900;
+// 	font-size: 44px;
+// 	line-height: 1.36;
+// 	text-align: center;
+// 	letter-spacing: 0.06em;
+// 	text-transform: uppercase;
+// }
+
+
+
+// .button--hero {
+// 	@extend .button;
+// 	margin-left: auto;
+// 	margin-right: auto;
+// 	background: $accent;
+// 	color: #FFFFFF;
+// 	font-weight: 700;
+// 	font-size: 16px;
+// 	line-height: 1.88;
+// 	letter-spacing: 0.06em;
+// 	padding: 10px 32px;
+
+
+// 	transition-property: background-color;
+// 	transition-duration: 250ms;
+// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+// 	&:hover, &:focus {
+// 		background-color: #188CE8;
+// 	}
+// }
 
