--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,7 +3,7 @@
 	display: inline-block;
 	font-family: 'Raleway';
 	font-weight: 700;
-	font-size: 26px;
+	// font-size: 24px;
 	line-height: 1.2;
 	letter-spacing: 0.03em;
 	text-decoration: none;
