--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,132 +1,356 @@
 // /* Шапка */
 
-.page-header {
-	border-bottom: 1px solid #ECECEC;
-	color: $site-nav-links-color;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 1.14;
-	letter-spacing: 0.02em;
-}
+
 
 .page-header__container {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
+	border-bottom: 1px solid #ECECEC;
 
-
-
-
-.nav {
-	display: flex;
-	align-items: center;
-
-
-	&__list {
+	@media screen and (min-width: 768px) {
 		display: flex;
 		align-items: center;
 	}
 
-	&__item:not(:last-child) {
-		margin-right: 50px;
+}
 
+
+.nav {
+
+	@media screen and (min-width: 768px) {
+		display: flex;
+		align-items: center;
+
+	}
+
+	&__logo {
+		padding: 14px 0;
+		color: $title-text-color;
+		font-size: 24px;
+
+		@media screen and (min-width: 768px) {
+			margin-right: 88px;
+			padding: 26px 0;
+		}
+
+		@media screen and (min-width: 1200px) {
+			margin-right: 93px;
+			padding: 24px 0;
+			font-size: 26px;;
+
+		}
+	}
+
+
+
+
+	&__list {
+		display: none;
+
+		@media screen and (min-width: 768px) {
+			display: flex;
+			align-items: center;
+		}
+
+	}
+
+	&__item {
+		@media screen and (min-width: 768px) {
+			&:not(:last-child) {
+				margin-right: 50px;
+			}
+		}
+	}
+
+
+	&__link {
+		@media screen and (min-width: 768px) {
+		display: block;
+		padding-top: 18px;
+		padding-bottom: 18px;
+		color: $site-nav-links-color;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 16px;
+		letter-spacing: 0.02em;
+
+		transition-property: color;
+		transition-duration: 250ms;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+
+			&:hover, &:focus {
+				color: $accent;
+		}
+		}
 	}
 
 
 }
-
-.nav__logo {
-	padding-top: 24px;
-	padding-bottom: 24px;
-	margin-right: 93px;
-
-	color: #000000;
-}
-
-.nav__link {
-	display: block;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	color: $site-nav-links-color;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 16px;
-	letter-spacing: 0.02em;
-
-	transition-property: color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-
-	&:hover, &:focus {
-		color: $accent;
-
-	}
-}
-
 
 .nav__link--active {
-	@extend .nav__link;
-	color: $accent;
-	position: relative;
-
-	&::after {
-		content: '';
+	@media screen and (min-width: 768px) {
 		display: block;
-		position: absolute;
-		bottom: -12px;
-		width: 100%;
-		height: 4px;
-		border-radius: 2px;
-		background-color: $accent;
+		padding-top: 18px;
+		padding-bottom: 18px;
+		color: $site-nav-links-color;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 14px;
+		letter-spacing: 0.02em;
+		color: $accent;
+		position: relative;
+
+		&::after {
+			content: '';
+			display: block;
+			position: absolute;
+			bottom: -16px;
+			width: 100%;
+			height: 4px;
+			border-radius: 2px;
+			background-color: $accent;
+
+			@media screen and (min-width: 1200px) {
+				bottom: -16px;
+			}
+		}
 	}
+
 }
+
 
 
 .page-header__contacts {
-	display: flex;
-	align-items: center;
+	display: none;
 
-
-	.contacts__item:not(:last-child) {
-		margin-right: 30px;
-
+	@media screen and (min-width: 768px) {
+		display: block;
+		margin-left: auto;
 	}
+
+	@media screen and (min-width: 1200px) {
+		display: flex;
+		align-items: center;
+	}
+
 }
 
+.contacts__item {
+	@media screen and (min-width: 768px) {
+
+		display: flex;
+		align-items: center;
+		&:not(:last-child) {
+			margin-bottom: 10px;
+		}
+	}
+
+	@media screen and (min-width: 1200px) {
+
+		&:not(:last-child) {
+			margin-bottom: 0;
+		}
+
+		margin-bottom: 0;
+
+		&:not(:last-child) {
+			margin-right: 30px;
+		}
+	}
+
+}
 
 .contacts__link {
-	display: flex;
-	align-items: center;
-	padding-top: 20px;
-	padding-bottom: 20px;
-	color: $primary-text-color;
-	font-weight: 500;
-	font-size: 14px;
-	line-height: 16px;
-	letter-spacing: 0.02em;
-	transition-property: color;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	@media screen and (min-width: 768px) {
+		display: flex;
+		align-items: center;
+		color: $primary-text-color;
 
+		font-size: 12px;
+		font-weight: 500;
+		line-height: 14px;
+		letter-spacing: 0.02em;
+		text-align: left;
 
+		transition-property: color;
+		transition-duration: 250ms;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
+		&:hover, &:focus {
+			color: $accent;
+		}
 
-	&:hover, &:focus {
-		color: $accent;
 	}
 
+	@media screen and (min-width: 1200px) {
+		font-size: 14px;
+	}
 }
+
 
 .contacts__icon {
-	margin-right: 10px;
-	fill: $primary-text-color;
-	transition-property: fill;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	@media screen and (min-width: 768px) {
+		fill: $primary-text-color;
+		margin-right: 8px;
 
-	.contacts__link:hover & {
-		fill: $accent;
+		transition-property: fill;
+		transition-duration: 250ms;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+		.contacts__link:hover & {
+			fill: $accent;
+		}
+
 	}
 }
+
+.mail-icon {
+	@media screen and (min-width: 768px) {
+		width: 14px;
+		height: 10px;
+
+	}
+}
+
+
+
+.tel-icon {
+	@media screen and (min-width: 768px) {
+		width: 10px;
+		height: 14px;
+
+	}
+}
+
+
+
+
+// .page-header {
+// 	border-bottom: 1px solid #ECECEC;
+// 	color: $site-nav-links-color;
+// 	font-weight: 500;
+// 	font-size: 14px;
+// 	line-height: 1.14;
+// 	letter-spacing: 0.02em;
+// }
+
+// .page-header__container {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: space-between;
+// }
+
+
+
+
+// .nav {
+// 	display: flex;
+// 	align-items: center;
+
+
+// 	&__list {
+// 		display: flex;
+// 		align-items: center;
+// 	}
+
+// 	&__item:not(:last-child) {
+// 		margin-right: 50px;
+
+// 	}
+
+
+// }
+
+// .nav__logo {
+// 	padding-top: 24px;
+// 	padding-bottom: 24px;
+// 	margin-right: 93px;
+
+// 	color: #000000;
+// }
+
+// .nav__link {
+// 	display: block;
+// 	padding-top: 20px;
+// 	padding-bottom: 20px;
+// 	color: $site-nav-links-color;
+// 	font-weight: 500;
+// 	font-size: 14px;
+// 	line-height: 16px;
+// 	letter-spacing: 0.02em;
+
+// 	transition-property: color;
+// 	transition-duration: 250ms;
+// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+
+// 	&:hover, &:focus {
+// 		color: $accent;
+
+// 	}
+// }
+
+
+// .nav__link--active {
+// 	@extend .nav__link;
+// 	color: $accent;
+// 	position: relative;
+
+// 	&::after {
+// 		content: '';
+// 		display: block;
+// 		position: absolute;
+// 		bottom: -12px;
+// 		width: 100%;
+// 		height: 4px;
+// 		border-radius: 2px;
+// 		background-color: $accent;
+// 	}
+// }
+
+
+// .page-header__contacts {
+// 	display: flex;
+// 	align-items: center;
+
+
+// 	.contacts__item:not(:last-child) {
+// 		margin-right: 30px;
+
+// 	}
+// }
+
+
+// .contacts__link {
+// 	display: flex;
+// 	align-items: center;
+// 	padding-top: 20px;
+// 	padding-bottom: 20px;
+// 	color: $primary-text-color;
+// 	font-weight: 500;
+// 	font-size: 14px;
+// 	line-height: 16px;
+// 	letter-spacing: 0.02em;
+// 	transition-property: color;
+// 	transition-duration: 250ms;
+// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+
+
+
+// 	&:hover, &:focus {
+// 		color: $accent;
+// 	}
+
+// }
+
+// .contacts__icon {
+// 	margin-right: 10px;
+// 	fill: $primary-text-color;
+// 	transition-property: fill;
+// 	transition-duration: 250ms;
+// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+// 	.contacts__link:hover & {
+// 		fill: $accent;
+// 	}
+// }
