--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,70 +1,80 @@
 /* Портфолио */
 /* список проектов */
 
+
+
+// .portfolio-container {
+
+// }
+
 .portfolio__filter-list {
-	margin-bottom: 50px;
+	padding-bottom: 40px;
 	display: flex;
-	justify-content: center;
-}
+	flex-wrap: wrap;
 
-
-/* задает отступы справа всем элементам кроме последнего */
-.portfolio__item:not(:last-child) {
-	margin-right: 8px;
-}
-
-.portfolio__filter-button {
-	padding: 6px 22px;
-
-	background: #F5F4FA;
-	color: $site-nav-links-color;
-	font-weight: 500;
-	font-size: 16px;
-	line-height: 1.62;
-	letter-spacing: 0.03em;
-
-	transition-property: color, background-color, box-shadow;
-	transition-duration: 250ms;
-	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-	&:hover, &:focus {
-		background-color: $accent;
-		color: #FFFFFF;
-		box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
-		box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.08);
-		box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+	@media screen and (min-width: 768px) {
+		justify-content: center;
 	}
 }
 
+.portfolio__item {
+	&:not(:last-child) {
+		margin-right: 8px;
 
-/* .project-list-container {
-  outline: 4px solid red;
-  display: flex;
-  указываем для того чтобы синий контейнер (который служит оберткой для карточек) смог уехать выше красного - основного. для лучшей визуализации неподвижный контейнер сделан толще
-} */
+	}
+
+	&:nth-child(-n + 3) {
+		margin-bottom: 15px;
+	}
+
+}
+
+
+
+.portfolio__filter-button {
+	@extend %button;
+		padding: 6px 22px;
+
+		background: #F5F4FA;
+		color: $site-nav-links-color;
+		font-weight: 500;
+		font-size: 16px;
+		line-height: 1.62;
+		letter-spacing: 0.03em;
+
+		transition-property: color, background-color, box-shadow;
+		transition-duration: 250ms;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+		&:hover, &:focus {
+			background-color: $accent;
+			color: #FFFFFF;
+			box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
+			box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.08);
+			box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+		}
+	}
+
+
+
+
+// .project__container {
+
+// }
 
 
 .project__list {
 	display: flex;
 	flex-wrap: wrap;
-	/* outline: 2px solid blue; */
-	/* margin: -15px; */
-	margin-top: -30px;
-	margin-left: -30px;
+
 }
 
-/* за счет того что даем    margin: -30px;, ширина .project-list увеличивается с 1170px на 30+30, поэтому и ширина карточек которая считается по формуле width: calc((100% - 60px) / 3), тоже увеличивается с 366.99 px до 390 px, и они со своими маржинами не влазят в CONTAINER шириной 1200пх */
-
-/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
-
-/* при таком расчете нужно считать width: calc((100% - 90px) / 3), 90, так как у нас теперь уже не два марджина, а 3 по 30px или 6 по 15px */
 
 .project__item {
-	flex-basis: calc((100% - 90px) / 3);
-	/* outline: 2px solid violet; */
-	/* margin: 15px; */
-	margin-top: 30px;
-	margin-left: 30px;
+	width: 100%;
+	&:not(:last-child) {
+		margin-bottom: 30px;
+	}
 
 	transition-property: box-shadow;
 	transition-duration: 250ms;
@@ -76,15 +86,92 @@
 		box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
 	}
 
+	@media screen and (min-width: 768px) {
+		width: calc((100% - 30px) / 2);
+
+		&:not(:last-child) {
+			margin-bottom: 0px;
+		}
+
+		&:nth-child(2n + 1) {
+			margin-right: 30px;
+		}
+
+		&:not(:nth-last-child(-n+2)) {
+			margin-bottom: 30px;
+		}
+
+	}
+
+	@media screen and (min-width: 1200px) {
+		width: calc((100% - 60px) / 3);
+
+		&:nth-child(2n + 1) {
+			margin-right: 0px;
+		}
+
+		&:not(:nth-last-child(-n+2)) {
+			margin-bottom: 0px;
+		}
+
+		&:not(:nth-child(3n + 3))  {
+			margin-right: 30px;
+		}
+
+		&:not(:nth-last-child(-n+3)) {
+			margin-bottom: 30px;
+		}
+
+	}
+
+
+
 
 }
 
+.project__link {
+	text-decoration: none;
+}
 
 .project__inner {
 	position: relative;
 	overflow: hidden;
 }
 
+
+	// .project__overlay {
+	// 	background-color: rgba(33, 150, 243, 0.9);
+	// 	padding: 63px 24px;
+
+	// 	position: absolute;
+
+	// 	top: 0;
+	// 	left: 0;
+	// 	width: 100%;
+	// 	height: 100%;
+
+	// 	transform: translateY(100%);
+
+	// 	transition-property: transform;
+	// 	transition-duration: 250ms;
+	// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	// 	.project__item:hover &, .project__item:focus & {
+	// 		transform: translateY(0);
+	// 	}
+
+
+
+// .project__inner-box {
+
+// }
+
+.project__img {
+
+	display: block;
+	width: 100%;
+
+}
 
 .project__overlay {
 	background-color: rgba(33, 150, 243, 0.9);
@@ -106,9 +193,9 @@
 	.project__item:hover &, .project__item:focus & {
 		transform: translateY(0);
 	}
+
+
 }
-
-
 
 .overlay__descr {
 	font-size: 18px;
@@ -120,46 +207,21 @@
 }
 
 
+.project__descr {
+	padding: 20px 24px;
+	border-left: 1px solid #EEEEEE;
+	border-bottom: 1px solid #EEEEEE;
+	border-right: 1px solid #EEEEEE;
+
+	@media screen and (min-width: 768px) {
+		height: 148px;
+	}
 
 
-
-.project_list span {
-	display: inline-block;
+	@media screen and (min-width: 1200px) {
+		height: 110px;
+	}
 }
-
-/* Можно также посчитать ширину карточки по формуле ниже, но при этом нужно НЕ задавать margin крайним правым и трем нижним элементам.
-При этом нужно удалить margins в селекторах .project-list и .project-list-item и использовать свойства ниже */
-
-/* .project-list-item {
-  width: calc((100% - 60px) / 3);
-  outline: 2px solid violet;
-  margin-top: 30px;
-  margin-left: 30px;
-} */
-
-/* задает отступы справа всем єлементам кроме каждого третего */
-/* .project-list-item:not(.project-list-item:nth-child(3n)) {
-  margin-right: 30px;
-} */
-
-
-/* задает отступы снизу всем єлементам кроме трех последних */
-/* .project-list-item:not(.project-list-item:nth-last-child(-n+3)) {
-  margin-bottom: 30px;
-} */
-
-
-
-
-.project__link {
-	text-decoration: none;
-}
-
-.project__img {
-	display: block;
-}
-
-
 
 .project__name {
 	margin-bottom: 4px;
@@ -176,6 +238,7 @@
 	&:hover, &:focus {
 		color: $accent;
 	}
+
 }
 
 .project__type {
@@ -192,11 +255,214 @@
 	&:hover, &:focus {
 		color: $accent;
 	}
+
 }
 
-.project__descr {
-	padding: 20px 24px;
-	border-left: 1px solid #EEEEEE;
-	border-bottom: 1px solid #EEEEEE;
-	border-right: 1px solid #EEEEEE;
-}
+
+
+
+
+
+
+
+
+
+// .portfolio__filter-list {
+// 	margin-bottom: 50px;
+// 	display: flex;
+// 	justify-content: center;
+// }
+
+
+// /* задает отступы справа всем элементам кроме последнего */
+// .portfolio__item:not(:last-child) {
+// 	margin-right: 8px;
+// }
+
+// .portfolio__filter-button {
+// 	padding: 6px 22px;
+
+// 	background: #F5F4FA;
+// 	color: $site-nav-links-color;
+// 	font-weight: 500;
+// 	font-size: 16px;
+// 	line-height: 1.62;
+// 	letter-spacing: 0.03em;
+
+// 	transition-property: color, background-color, box-shadow;
+// 	transition-duration: 250ms;
+// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+// 	&:hover, &:focus {
+// 		background-color: $accent;
+// 		color: #FFFFFF;
+// 		box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
+// 		box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.08);
+// 		box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+// 	}
+// }
+
+
+// /* .project-list-container {
+//   outline: 4px solid red;
+//   display: flex;
+//   указываем для того чтобы синий контейнер (который служит оберткой для карточек) смог уехать выше красного - основного. для лучшей визуализации неподвижный контейнер сделан толще
+// } */
+
+
+// .project__list {
+// 	display: flex;
+// 	flex-wrap: wrap;
+// 	/* outline: 2px solid blue; */
+// 	/* margin: -15px; */
+// 	margin-top: -30px;
+// 	margin-left: -30px;
+// }
+
+// /* за счет того что даем    margin: -30px;, ширина .project-list увеличивается с 1170px на 30+30, поэтому и ширина карточек которая считается по формуле width: calc((100% - 60px) / 3), тоже увеличивается с 366.99 px до 390 px, и они со своими маржинами не влазят в CONTAINER шириной 1200пх */
+
+// /* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
+// /* при таком расчете нужно считать width: calc((100% - 90px) / 3), 90, так как у нас теперь уже не два марджина, а 3 по 30px или 6 по 15px */
+
+// .project__item {
+// 	flex-basis: calc((100% - 90px) / 3);
+// 	/* outline: 2px solid violet; */
+// 	/* margin: 15px; */
+// 	margin-top: 30px;
+// 	margin-left: 30px;
+
+// 	transition-property: box-shadow;
+// 	transition-duration: 250ms;
+// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+// 	&:hover, &:focus {
+// 		box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16);
+// 		box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.06);
+// 		box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+// 	}
+
+
+// }
+
+
+// .project__inner {
+// 	position: relative;
+// 	overflow: hidden;
+// }
+
+
+// .project__overlay {
+// 	background-color: rgba(33, 150, 243, 0.9);
+// 	padding: 63px 24px;
+
+// 	position: absolute;
+
+// 	top: 0;
+// 	left: 0;
+// 	width: 100%;
+// 	height: 100%;
+
+// 	transform: translateY(100%);
+
+// 	transition-property: transform;
+// 	transition-duration: 250ms;
+// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+// 	.project__item:hover &, .project__item:focus & {
+// 		transform: translateY(0);
+// 	}
+// }
+
+
+
+// .overlay__descr {
+// 	font-size: 18px;
+// 	font-weight: 400;
+// 	line-height: 1.55;
+// 	letter-spacing: 0.03em;
+// 	text-align: left;
+// 	color: #FFFFFF;
+// }
+
+
+
+
+
+// .project_list span {
+// 	display: inline-block;
+// }
+
+// /* Можно также посчитать ширину карточки по формуле ниже, но при этом нужно НЕ задавать margin крайним правым и трем нижним элементам.
+// При этом нужно удалить margins в селекторах .project-list и .project-list-item и использовать свойства ниже */
+
+// /* .project-list-item {
+//   width: calc((100% - 60px) / 3);
+//   outline: 2px solid violet;
+//   margin-top: 30px;
+//   margin-left: 30px;
+// } */
+
+// /* задает отступы справа всем єлементам кроме каждого третего */
+// /* .project-list-item:not(.project-list-item:nth-child(3n)) {
+//   margin-right: 30px;
+// } */
+
+
+// /* задает отступы снизу всем єлементам кроме трех последних */
+// /* .project-list-item:not(.project-list-item:nth-last-child(-n+3)) {
+//   margin-bottom: 30px;
+// } */
+
+
+
+
+// .project__link {
+// 	text-decoration: none;
+// }
+
+// .project__img {
+// 	display: block;
+// }
+
+
+
+// .project__name {
+// 	margin-bottom: 4px;
+// 	color: $title-text-color;
+// 	font-weight: 700;
+// 	font-size: 18px;
+// 	line-height: 2;
+// 	letter-spacing: 0.06em;
+
+// 	transition-property: color;
+// 	transition-duration: 250ms;
+// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+// 	&:hover, &:focus {
+// 		color: $accent;
+// 	}
+// }
+
+// .project__type {
+// 	color: $primary-text-color;
+// 	font-weight: 400;
+// 	font-size: 16px;
+// 	line-height: 1.88;
+// 	letter-spacing: 0.03em;
+
+// 	transition-property: color;
+// 	transition-duration: 250ms;
+// 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+// 	&:hover, &:focus {
+// 		color: $accent;
+// 	}
+// }
+
+// .project__descr {
+// 	padding: 20px 24px;
+// 	border-left: 1px solid #EEEEEE;
+// 	border-bottom: 1px solid #EEEEEE;
+// 	border-right: 1px solid #EEEEEE;
+// }
