--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,70 +1,177 @@
+
 .team {
 	background-color: $secondary-background-color;
 
-	&__container {
-		padding: 0 15px;
-	}
 
 	&__list {
-		display: flex;
-		flex-wrap: nowrap;
-	}
+		@media screen and (min-width: 768px) {
+			display: flex;
+			flex-wrap: wrap;
+		}
 
-	&__img {
-		display: block;
 	}
 
 	&__item {
-		width: calc((100% - 90px) / 4);
-
-		background-color: #FFFFFF;
-		border-bottom-left-radius: 4px;
-		border-bottom-right-radius: 4px;
-		box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-		box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
-
-		box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-
-		box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-
 
 		&:not(:last-child) {
-			margin-right: 30px;
+					margin-bottom: 30px;
+				}
+
+
+		@media screen and (min-width: 768px) {
+			width: calc((100% - 30px) / 2);
+
+			&:not(:last-child) {
+					margin-bottom: 0;
+				}
+
+			&:nth-child(2n + 1) {
+				margin-right: 30px;
+			}
+
+			&:nth-child(-n + 2) {
+				margin-bottom: 30px;
+			}
+
 		}
+
+		@media screen and (min-width: 1200px) {
+			width: calc((100% - 90px) / 4);
+
+			&:nth-child(2n + 1) {
+				margin-right: 0px;
+			}
+
+			&:nth-child(-n + 2) {
+				margin-bottom: 0px;
+			}
+
+			&:not(:last-child) {
+				margin-right: 30px;
+			}
+
+		}
+
+		// width: 100%;
+
+
+
+
+	}
+
+	&__img {
+		width: 100%;
+		display: block;
+
 	}
 
 	&__descr {
-		padding: 30px 32px;
+		padding-top: 30px;
+		padding-bottom: 24px;
+		text-align: center;
+
 	}
 
 	&__member {
 		margin-bottom: 10px;
-		text-align: center;
-		color: $title-text-color;
-		font-weight: 500;
 		font-size: 16px;
+		font-weight: 500;
 		line-height: 1.19;
 		letter-spacing: 0.03em;
+		text-align: center;
+
+		color: $title-text-color;
+
+
 	}
 
 	&__position {
 		margin-bottom: 16px;
-		text-align: center;
-
-		color: $primary-text-color;
 		font-size: 16px;
+		font-weight: 400;
 		line-height: 1.19;
 		letter-spacing: 0.03em;
+		text-align: center;
 	}
 
 }
 
 
+
+
+
+
+// .team {
+// 	background-color: $secondary-background-color;
+
+
+// 	&__list {
+// 		display: flex;
+// 		flex-wrap: nowrap;
+// 	}
+
+// 	&__img {
+// 		display: block;
+// 	}
+
+// 	&__item {
+// 		width: calc((100% - 90px) / 4);
+
+// 		background-color: #FFFFFF;
+// 		border-bottom-left-radius: 4px;
+// 		border-bottom-right-radius: 4px;
+// 		box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+// 		box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+
+// 		box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+
+// 		box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
+
+// 		&:not(:last-child) {
+// 			margin-right: 30px;
+// 		}
+// 	}
+
+// 	&__descr {
+// 		padding: 30px 32px;
+// 	}
+
+// 	&__member {
+// 		margin-bottom: 10px;
+// 		text-align: center;
+// 		color: $title-text-color;
+// 		font-weight: 500;
+// 		font-size: 16px;
+// 		line-height: 1.19;
+// 		letter-spacing: 0.03em;
+// 	}
+
+// 	&__position {
+// 		margin-bottom: 16px;
+// 		text-align: center;
+
+// 		color: $primary-text-color;
+// 		font-size: 16px;
+// 		line-height: 1.19;
+// 		letter-spacing: 0.03em;
+// 	}
+
+// }
+
+
 .socials {
+	// width: 206px;
+	margin-right: auto;
+	margin-left: auto;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 	list-style: none;
+
+	&__item:not(:last-child) {
+		margin-right: 10px;
+	}
 
 	&__link {
 		width: 44px;
