--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -13,6 +13,8 @@
 	transition-property: opacity;
 	transition-duration: 250ms;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+	// overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -27,13 +29,14 @@
 .modal {
 	position: fixed;
 
+	overflow-y: overlay;
 
 	top: 50%;
 	left: 50%;
 
 	width: 95%;
 	max-width: 450px;
-	max-height: 610px;
+	max-height: 620px;
 
 	padding: 40px;
 	border-radius: 4px;
@@ -48,7 +51,7 @@
 
 	@media screen and (min-width: 1200px) {
 		max-width: 528px;
-		min-height: 580px;
+		min-height: 590px;
 	}
 
 
