--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -4,6 +4,7 @@
 
 .page-header__container {
 	border-bottom: 1px solid #ECECEC;
+	position: relative;
 
 	@media screen and (min-width: 768px) {
 		display: flex;
@@ -22,7 +23,7 @@
 	}
 
 	&__logo {
-		padding: 14px 0;
+		padding: 16px 0;
 		color: $title-text-color;
 		font-size: 24px;
 
@@ -42,8 +43,31 @@
 
 
 
+
+
 	&__list {
-		display: none;
+
+		@media screen and (max-width: 768px) {
+			display: none;
+
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 796px;
+
+			padding: 48px 40px;
+
+			z-index: 1;
+
+			background-color: rgb(52, 209, 188);
+
+
+			&.is-open {
+				display: block;
+			}
+		}
+
 
 		@media screen and (min-width: 768px) {
 			display: flex;
@@ -53,7 +77,16 @@
 	}
 
 	&__item {
+		@media screen and (max-width: 768px) {
+			&:not(:last-child) {
+			padding-bottom: 32px;
+			}
+		}
+
+
 		@media screen and (min-width: 768px) {
+
+
 			&:not(:last-child) {
 				margin-right: 50px;
 			}
@@ -62,6 +95,29 @@
 
 
 	&__link {
+
+		font-size: 40px;
+		font-weight: 500;
+		line-height: 1.18;
+		letter-spacing: 0.02em;
+		// text-align: center;
+		color: $title-text-color;
+
+		&--active {
+			color: $accent;
+		}
+
+		transition-property: color;
+		transition-duration: 250ms;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+
+		&:hover,
+		&:focus {
+			color: $accent;
+		}
+
+
 		@media screen and (min-width: 768px) {
 		display: block;
 		padding-top: 18px;
@@ -72,19 +128,81 @@
 		line-height: 16px;
 		letter-spacing: 0.02em;
 
-		transition-property: color;
-		transition-duration: 250ms;
-		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+		// transition-property: color;
+		// transition-duration: 250ms;
+		// transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 
-			&:hover, &:focus {
-				color: $accent;
-		}
+		// 	&:hover, &:focus {
+		// 		color: $accent;
+		// }
 		}
 	}
 
 
 }
+
+.nav__button {
+	display: none;
+
+	@media screen and (max-width: 768px) {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin: 0;
+		// padding: 6px;
+		border: none;
+		background-color: transparent;
+		position: absolute;
+		top: 10px;
+		right: 15px;
+		width: 40px;
+		height: 40px;
+
+		z-index: 2;
+
+		cursor: pointer;
+
+		transition-property: fill;
+		transition-duration: 250ms;
+		transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+
+			&:hover, &:focus {
+				fill: $accent;
+		}
+
+
+	}
+
+}
+
+
+
+.close-icon {
+	display: none;
+
+}
+
+.nav__button.is-open .close-icon {
+	display: block;
+}
+
+.nav__button.is-open .menu-icon {
+	display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 .nav__link--active {
 	@media screen and (min-width: 768px) {
@@ -120,7 +238,28 @@
 
 
 .page-header__contacts {
-	display: none;
+
+	@media screen and (max-width: 768px) {
+		display: none;
+
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 796px;
+
+		padding: 48px 40px;
+
+		z-index: 1;
+
+		background-color: rgb(52, 209, 188);
+
+
+		&.is-open {
+			display: block;
+		}
+	}
+
 
 	@media screen and (min-width: 768px) {
 		display: block;
