остаются лишь картинки

--- a/sass/utils/_common.scss
+++ b/sass/utils/_common.scss
@@ -73,22 +73,22 @@
 
 
 
-.section {
-	outline: 6px solid red;
-	/* background-color: rgba(255, 182, 193, 0.4); */
-}
+// .section {
+// 	outline: 6px solid red;
+// 	/* background-color: rgba(255, 182, 193, 0.4); */
+// }
 
-.container {
-	outline: 3px solid green;
-	/* background-color: rgba(152, 251, 152, 0.5); */
-}
+// .container {
+// 	outline: 3px solid green;
+// 	/* background-color: rgba(152, 251, 152, 0.5); */
+// }
 
-ul {
-	outline: 2px dashed blue;
-	/* background-color: rgba(63, 74, 226, 0.5); */
-}
+// ul {
+// 	outline: 2px dashed blue;
+// 	/* background-color: rgba(63, 74, 226, 0.5); */
+// }
 
-li {
-	outline: 2px dotted Fuchsia;
-	/* background-color: rgba(255, 0, 255, 0.5); */
-}
+// li {
+// 	outline: 2px dotted Fuchsia;
+// 	/* background-color: rgba(255, 0, 255, 0.5); */
+// }
