--- a/css/main.css
+++ b/css/main.css
@@ -55,26 +55,6 @@
   overflow: hidden;
 }
 
-.section {
-  outline: 6px solid red;
-  /* background-color: rgba(255, 182, 193, 0.4); */
-}
-
-.container {
-  outline: 3px solid green;
-  /* background-color: rgba(152, 251, 152, 0.5); */
-}
-
-ul {
-  outline: 2px dashed blue;
-  /* background-color: rgba(63, 74, 226, 0.5); */
-}
-
-li {
-  outline: 2px dotted Fuchsia;
-  /* background-color: rgba(255, 0, 255, 0.5); */
-}
-
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -381,21 +361,8 @@ summary {
     font-size: 26px;
   }
 }
-@media screen and (max-width: 768px) {
-  .nav__list {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 796px;
-    padding: 48px 40px;
-    z-index: 1;
-    background-color: rgb(52, 209, 188);
-  }
-  .nav__list.is-open {
-    display: block;
-  }
+.nav__list {
+  display: none;
 }
 @media screen and (min-width: 768px) {
   .nav__list {
@@ -405,11 +372,6 @@ summary {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-  }
-}
-@media screen and (max-width: 768px) {
-  .nav__item:not(:last-child) {
-    padding-bottom: 32px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -422,6 +384,7 @@ summary {
   font-weight: 500;
   line-height: 1.18;
   letter-spacing: 0.02em;
+  text-align: center;
   color: #212121;
   -webkit-transition-property: color;
   transition-property: color;
@@ -497,6 +460,109 @@ summary {
   display: none;
 }
 
+.mob-menu {
+  display: none;
+}
+@media screen and (max-width: 768px) {
+  .mob-menu {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    max-width: 480px;
+    height: 796px;
+    padding: 48px 40px;
+    z-index: 1;
+    background-color: rgb(236, 242, 241);
+  }
+  .mob-menu.is-open {
+    display: block;
+  }
+  .mob-menu .mob-nav__list {
+    margin-bottom: 302px;
+  }
+  .mob-menu .mob-nav__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mob-menu .mob-nav__link {
+    font-size: 40px;
+    font-weight: 500;
+    line-height: 47px;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #212121;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mob-menu .mob-nav__link:hover, .mob-menu .mob-nav__link:focus {
+    color: #2196F3;
+  }
+  .mob-menu .mob-nav__link--active {
+    color: #2196F3;
+  }
+  .mob-menu .mob-contacts {
+    margin-bottom: 64px;
+  }
+  .mob-menu .mob-contacts__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mob-menu .mob-contacts__link {
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 250ms;
+            transition-duration: 250ms;
+    -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .mob-menu .mob-contacts__link--tel {
+    font-size: 34px;
+    font-weight: 500;
+    line-height: 1.76;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #2196F3;
+  }
+  .mob-menu .mob-contacts__link--mail {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #757575;
+  }
+  .mob-menu .mob-contacts__link:hover, .mob-menu .mob-contacts__link:focus {
+    color: #2196F3;
+  }
+  .mob-menu .mob-socials {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .mob-menu .mob-socials__item {
+    height: 22px;
+  }
+  .mob-menu .mob-socials__item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    padding-right: 10px;
+  }
+  .mob-menu .mob-socials__item:nth-child(n+2) {
+    margin-left: 10px;
+  }
+  .mob-menu .mob-socials__link {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: #2196F3;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .nav__link--active {
     display: block;
@@ -527,21 +593,8 @@ summary {
   }
 }
 
-@media screen and (max-width: 768px) {
-  .page-header__contacts {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 796px;
-    padding: 48px 40px;
-    z-index: 1;
-    background-color: rgb(52, 209, 188);
-  }
-  .page-header__contacts.is-open {
-    display: block;
-  }
+.page-header__contacts {
+  display: none;
 }
 @media screen and (min-width: 768px) {
   .page-header__contacts {
