--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -46,27 +46,28 @@
 
 
 	&__list {
+		display: none;
 
-		@media screen and (max-width: 768px) {
-			display: none;
+		// @media screen and (max-width: 768px) {
+		// 	display: none;
 
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 796px;
+		// 	position: absolute;
+		// 	top: 0;
+		// 	left: 0;
+		// 	width: 100%;
+		// 	height: 796px;
 
-			padding: 48px 40px;
+		// 	padding: 48px 40px;
 
-			z-index: 1;
+		// 	z-index: 1;
 
-			background-color: rgb(52, 209, 188);
+		// 	background-color: rgb(52, 209, 188);
 
 
-			&.is-open {
-				display: block;
-			}
-		}
+		// 	&.is-open {
+		// 		display: block;
+		// 	}
+		// }
 
 
 		@media screen and (min-width: 768px) {
@@ -77,15 +78,10 @@
 	}
 
 	&__item {
-		@media screen and (max-width: 768px) {
-			&:not(:last-child) {
-			padding-bottom: 32px;
-			}
-		}
+
 
 
 		@media screen and (min-width: 768px) {
-
 
 			&:not(:last-child) {
 				margin-right: 50px;
@@ -100,7 +96,7 @@
 		font-weight: 500;
 		line-height: 1.18;
 		letter-spacing: 0.02em;
-		// text-align: center;
+		text-align: center;
 		color: $title-text-color;
 
 		&--active {
@@ -193,10 +189,174 @@
 }
 
 
+// .mob-menu {
+// 	display: none;
+// }
+
+
+.mob-menu {
+	display: none;
+
+	@media screen and (max-width: 768px) {
+		display: none;
+
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		max-width: 480px;
+		height: 796px;
+
+		padding: 48px 40px;
+
+		z-index: 1;
+
+		background-color: rgb(236, 242, 241);
+
+
+		&.is-open {
+			display: block;
+		}
+
+		.mob-nav__list {
+			margin-bottom: 302px;
+
+		}
+
+		.mob-nav__item {
+			&:not(:last-child) {
+				margin-bottom: 32px;
+			}
+
+		}
+
+		.mob-nav__link {
+			font-size: 40px;
+			font-weight: 500;
+			line-height: 47px;
+			letter-spacing: 0.02em;
+			text-align: left;
+			color: $title-text-color;
+
+			transition-property: color;
+			transition-duration: 250ms;
+			transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+			&:hover,
+			&:focus {
+				color: $accent;
+			}
+
+		}
+
+		.mob-nav__link--active {
+			color: $accent;
+
+		}
+
+
+		.mob-contacts {
+			margin-bottom: 64px;
+		}
+
+		.mob-contacts__item {
+			&:not(:last-child) {
+				margin-bottom: 32px;
+			}
+
+		}
+
+		.mob-contacts__link {
+
+			&--tel {
+				font-size: 34px;
+				font-weight: 500;
+				line-height: 1.76;
+				letter-spacing: 0.02em;
+				text-align: left;
+
+				color: $accent;
+			}
+
+			&--mail {
+				font-size: 24px;
+				font-weight: 500;
+				line-height: 1.17;
+				letter-spacing: 0.02em;
+				text-align: left;
+				color: $primary-text-color;
+			}
+
+			transition-property: color;
+			transition-duration: 250ms;
+			transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+			&:hover,
+			&:focus {
+				color: $accent;
+			}
+
+		}
+
+		.mob-socials {
+			display: flex;
+
+		}
+
+		.mob-socials__item {
+
+			height: 22px;
+			&:not(:last-child) {
+				border-right: 1px solid rgba(33, 33, 33, 0.2);
+				padding-right: 10px;
+			}
+
+			&:nth-child(n + 2) {
+				margin-left: 10px;
+			}
+
+		}
+
+		.mob-socials__link {
+			font-size: 18px;
+			font-weight: 500;
+			line-height: 1.2;
+			letter-spacing: 0.02em;
+			text-align: left;
+			color: $accent;
+
+		}
 
 
 
 
+
+
+
+
+
+
+
+
+
+
+	}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
 
 
 
@@ -239,26 +399,28 @@
 
 .page-header__contacts {
 
-	@media screen and (max-width: 768px) {
-		display: none;
+	display: none;
 
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 796px;
+	// @media screen and (max-width: 768px) {
+	// 	display: none;
 
-		padding: 48px 40px;
+	// 	position: absolute;
+	// 	top: 0;
+	// 	left: 0;
+	// 	width: 100%;
+	// 	height: 796px;
 
-		z-index: 1;
+	// 	padding: 48px 40px;
 
-		background-color: rgb(52, 209, 188);
+	// 	z-index: 1;
+
+	// 	background-color: rgb(52, 209, 188);
 
 
-		&.is-open {
-			display: block;
-		}
-	}
+	// 	&.is-open {
+	// 		display: block;
+	// 	}
+	// }
 
 
 	@media screen and (min-width: 768px) {
