--- a/css/main.css
+++ b/css/main.css
@@ -463,7 +463,7 @@ summary {
 .mob-menu {
   display: none;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767.98px) {
   .mob-menu {
     display: none;
     position: absolute;
@@ -471,7 +471,9 @@ summary {
     left: 0;
     width: 100%;
     max-width: 480px;
-    height: 796px;
+    height: 100%;
+    min-height: 796px;
+    overflow-y: scroll;
     padding: 48px 40px;
     z-index: 1;
     background-color: rgb(236, 242, 241);
@@ -542,6 +544,8 @@ summary {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .mob-menu .mob-socials__item {
     height: 22px;
@@ -1386,6 +1390,7 @@ summary {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
+  z-index: 99;
   -webkit-transition-property: opacity;
   transition-property: opacity;
   -webkit-transition-duration: 250ms;
