--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -9,6 +9,7 @@
 	background-color: rgba(0, 0, 0, 0.2);
 
 	opacity: 1;
+	z-index: 99;
 
 	transition-property: opacity;
 	transition-duration: 250ms;
@@ -31,12 +32,16 @@
 
 	overflow-y: overlay;
 
+	// z-index: 3;
+
 	top: 50%;
 	left: 50%;
 
 	width: 95%;
 	max-width: 450px;
 	max-height: 620px;
+
+
 
 	padding: 40px;
 	border-radius: 4px;
@@ -269,6 +274,11 @@
 		background-color: #188CE8;
 	}
 }
+
+
+	  // opacity: 0;
+	  // visibility: hidden;
+	  // pointer-events: none;
 
 
 
