меняет стили заголовков секций

--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,16 @@
   text-align: center;
   color: #212121;
 }
+@media screen and (min-width: 1200px) {
+  .title {
+    margin-bottom: 50px;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-align: center;
+  }
+}
 
 .visually-hidden {
   position: absolute;
