--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -16,7 +16,7 @@
 						linear-gradient(to right,
 							rgba(47, 48, 58, 0.4),
 							rgba(47, 48, 58, 0.4)),
-						url('../../images/main/herobg-mob.jpg');
+						url('../images/main/herobg-mob.jpg');
 					background-size: cover;
 					background-repeat: no-repeat;
 
@@ -28,7 +28,7 @@
 								linear-gradient(to right,
 									rgba(47, 48, 58, 0.4),
 									rgba(47, 48, 58, 0.4)),
-								url('../../images/main/herobg-mob@2x.jpg');
+								url('../images/main/herobg-mob@2x.jpg');
 							background-size: cover;
 							background-repeat: no-repeat;
 						}
@@ -42,7 +42,7 @@
 						linear-gradient(to right,
 							rgba(47, 48, 58, 0.4),
 							rgba(47, 48, 58, 0.4)),
-						url('../../images/main/herobg-tab.jpg');
+						url('../images/main/herobg-tab.jpg');
 					background-size: cover;
 					background-repeat: no-repeat;
 
@@ -54,7 +54,7 @@
 								linear-gradient(to right,
 									rgba(47, 48, 58, 0.4),
 									rgba(47, 48, 58, 0.4)),
-								url('../../images/main/herobg-tab@2x.jpg');
+								url('../images/main/herobg-tab@2x.jpg');
 							background-size: cover;
 							background-repeat: no-repeat;
 						}
@@ -74,7 +74,7 @@
 					linear-gradient(to right,
 						rgba(47, 48, 58, 0.4),
 						rgba(47, 48, 58, 0.4)),
-					url('../../images/main/herobg-desktop.jpg');
+					url('../images/main/herobg-desktop.jpg');
 				background-size: cover;
 				background-repeat: no-repeat;
 
@@ -86,7 +86,7 @@
 							linear-gradient(to right,
 								rgba(47, 48, 58, 0.4),
 								rgba(47, 48, 58, 0.4)),
-							url('../../images/main/herobg-desktop@2x.jpg');
+							url('../images/main/herobg-desktop@2x.jpg');
 						background-size: cover;
 						background-repeat: no-repeat;
 					}
