исправляет все кроме меню

--- a/sass/components/_customers.scss
+++ b/sass/components/_customers.scss
@@ -70,7 +70,7 @@
 		align-items: center;
 
 		border-radius: 4px;
-		border: 1px solid $secondary-background-color;
+		border: 1px solid $icon-primary-color;
 
 		transition-property: border-color;
 		transition-duration: 250ms;
