--- a/css/main.css
+++ b/css/main.css
@@ -328,8 +328,11 @@ summary {
   display: list-item;
 }
 
-.page-header__container {
+.page-header {
   border-bottom: 1px solid #ECECEC;
+}
+
+.page-header__container {
   position: relative;
 }
 @media screen and (min-width: 768px) {
@@ -788,17 +791,16 @@ summary {
 }
 .hero__title {
   margin-bottom: 30px;
-  font-family: Roboto;
   font-size: 26px;
   font-weight: 900;
   line-height: 1.61;
   letter-spacing: 0.06em;
+  text-transform: uppercase;
   text-align: center;
   color: #FFFFFF;
 }
 @media screen and (min-width: 1200px) {
   .hero__title {
-    font-family: Roboto;
     font-size: 44px;
     font-weight: 900;
     line-height: 1.36;
@@ -836,7 +838,6 @@ summary {
 
 .feature-item {
   width: 100%;
-  text-align: center;
 }
 @media screen and (max-width: 767.5px) {
   .feature-item:not(:last-child) {
@@ -885,9 +886,13 @@ summary {
   font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-align: center;
   text-transform: uppercase;
   color: #212121;
+}
+@media screen and (max-width: 767.5px) {
+  .feature-item__title {
+    text-align: center;
+  }
 }
 
 .activity {
@@ -955,8 +960,18 @@ summary {
         flex-wrap: wrap;
   }
 }
-.team__item:not(:last-child) {
-  margin-bottom: 30px;
+.team__item {
+  -webkit-box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+          box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+@media screen and (max-width: 767.5px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199.5px) {
   .team__item {
@@ -1125,7 +1140,7 @@ summary {
       -ms-flex-align: center;
           align-items: center;
   border-radius: 4px;
-  border: 1px solid #F5F4FA;
+  border: 1px solid #AFB1B8;
   -webkit-transition-property: border-color;
   transition-property: border-color;
   -webkit-transition-duration: 250ms;
@@ -1204,8 +1219,10 @@ summary {
   }
 }
 
-.footer-contacts {
-  margin-bottom: 60px;
+@media screen and (max-width: 1199.5px) {
+  .footer-contacts {
+    margin-bottom: 60px;
+  }
 }
 .footer-contacts__physical-address, .footer-contacts__tel, .footer-contacts__email {
   display: inline-block;
@@ -1247,12 +1264,9 @@ summary {
   color: #2196F3;
 }
 
-.join {
-  margin-bottom: 60px;
-}
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767.5px) {
   .join {
-    margin-bottom: 0;
+    margin-bottom: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1269,6 +1283,11 @@ summary {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #FFFFFF;
+}
+@media screen and (min-width: 1200px) {
+  .join__title {
+    text-align: left;
+  }
 }
 
 .join-socials {
@@ -1800,8 +1819,15 @@ summary {
 .portfolio__item:not(:last-child) {
   margin-right: 8px;
 }
-.portfolio__item:nth-child(-n+3) {
-  margin-bottom: 15px;
+@media screen and (max-width: 767.5px) {
+  .portfolio__item:nth-child(-n+3) {
+    margin-bottom: 15px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+  .portfolio__item .project__descr {
+    height: 148px;
+  }
 }
 
 .portfolio__filter-button {
@@ -1942,7 +1968,7 @@ summary {
   border-right: 1px solid #EEEEEE;
 }
 @media screen and (min-width: 768px) {
-  .project__descr {
+  .project__descr.higher {
     height: 148px;
   }
 }
