--- a/sass/components/_about-company.scss
+++ b/sass/components/_about-company.scss
@@ -13,7 +13,7 @@
 .feature-item {
 
 	width: 100%;
-	text-align: center;
+	// text-align: center;
 
 	@media screen and (max-width: 767.5px) {
 		&:not(:last-child) {
@@ -71,11 +71,15 @@
 		font-weight: 700;
 		line-height: 1.14;
 		letter-spacing: 0.03em;
-		text-align: center;
 
 		text-transform: uppercase;
 
 		color: $title-text-color;
+
+
+		@media screen and (max-width: 767.5px) {
+			text-align: center;
+		}
 
 	}
 
