--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,9 +1,11 @@
 // /* Шапка */
 
+.page-header {
+	border-bottom: 1px solid #ECECEC;
 
+}
 
 .page-header__container {
-	border-bottom: 1px solid #ECECEC;
 	position: relative;
 
 
