--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -17,9 +17,18 @@
 
 	}
 
-	&:nth-child(-n + 3) {
+	@media screen and (max-width: 767.5px) {
+		&:nth-child(-n + 3) {
 		margin-bottom: 15px;
+		}
 	}
+
+	@media screen and (min-width: 768px) and (max-width: 1199.5px) {
+		& .project__descr {
+			height: 148px;
+		}
+	}
+
 
 }
 
@@ -28,7 +37,6 @@
 .portfolio__filter-button {
 	@extend %button;
 		padding: 6px 22px;
-
 		background: #F5F4FA;
 		color: $site-nav-links-color;
 		font-weight: 500;
@@ -169,7 +177,10 @@
 	border-right: 1px solid #EEEEEE;
 
 	@media screen and (min-width: 768px) {
-		height: 148px;
+		&.higher {
+			height: 148px;
+		}
+
 	}
 
 
