--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -13,9 +13,18 @@
 
 	&__item {
 
-		&:not(:last-child) {
+
+		box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+		box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+		box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
+
+		@media screen and (max-width: 767.5px) {
+			&:not(:last-child) {
 					margin-bottom: 30px;
 				}
+		}
+
 
 
 		@media screen and (min-width: 768px) and (max-width: 1199.5px) {
